--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
 <body>s
     <h1>E-Glyph</h1>
+    <input type="file" accept="text" id="read"/>
 
-
-    <p>hsadfhsiakjhbifnhsaiebfilsahbildvcnbweasbrfgilsahbelfnhsiaefiweasilfgbwsileb</p>
+    <p>----------------------------------------------------------------</p>
+    <p id="single"></p>
 </body>
