Added sick buttons

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     <h1>E-Glyph</h1>
     <input type="file" accept="text" id="read"/>
 
+    <div class="flex-parent jc-center">
+        <button type="button" class="block" id="left" onclick="previous()">Previous</button>
+        <button type="button" class="block" id="right" onclick="next()">Next</button>
+    </div>
+
     <p>----------------------------------------------------------------</p>
     <p id="single"></p>
 </body>
