--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>s
     <h1>E-Glyph</h1>
-    <input type="file" accept="text" id="read"/>
+    <input type="file" id="input"/>
 
     <div class="flex-parent jc-center">
         <button type="button" class="block" id="left" onclick="previous()">Previous</button>
