--- a/index.html
+++ b/index.html
@@ -11,14 +11,21 @@
 
 
 <body>
-    <h1>E-Glyph</h1>
-    <input type="file" accept="text" id="read"/>
+    <div class="header">
+        <h1>E-Glyph</h1>
+        <input type="file" accept="text" id="read" oninput="input(this.value)"/>
 
-    <div class="flex-parent jc-center">
-        <button type="button" class="block" id="left" onclick="previous()">Previous</button>
-        <button type="button" class="block" id="right" onclick="next()">Next</button>
+        <div class="flex-parent jc-center">
+            <button type="button" class="block" id="left" onclick="previous()">Previous</button>
+            <button type="button" class="block" id="right" onclick="next()">Next</button>
+        </div>
+
+        <p>----------------------------------------------------------------</p>
     </div>
 
-    <p>----------------------------------------------------------------</p>
-    <p id="single"></p>
+    <div class="harold">
+        <div class="display">
+            <p id="single" class="single">H</p>
+        </div>
+    </div>
 </body>
