text file input working

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <h1>E-Glyph</h1>
     <input type="file" id="input"/>
         <div class="flex-parent jc-center">
-            <button type="button" class="block" id="left" onclick="previous()">Previous</button>
-            <button type="button" class="block" id="right" onclick="next()">Next</button>
+            <button type="button" class="block" id="left">Previous</button>
+            <button type="button" class="block" id="right">Next</button>
         </div>
 
         <p>----------------------------------------------------------------</p>
