CSS is still not working

--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
 
 
 <body>
-    <h1>E-Glyph</h1>
-    <input type="file" id="input"/>
-        <div class="flex-parent jc-center">
-            <button type="button" class="block" id="left">Previous</button>
-            <button type="button" class="block" id="right">Next</button>
-        </div>
+	<h1>E-Glyph</h1>
+	<div class="input">
+		<input type="file" id="input"/>
+		<div class="flex-parent jc-center">
+			<button type="button" class="block" id="left">Previous</button>
+			<button type="button" class="block" id="right">Next</button>
+		</div>
+	</div>
 
-        <p>----------------------------------------------------------------</p>
-    </div>
 
-    <div class="harold">
-        <div class="display">
-            <p id="single" class="single">H</p>
-        </div>
-    </div>
+	<div class="harold">
+		<div class="display">
+			<span id="single" class="single">H</span>
+		</div>
+	</div>
 </body>
