--- a/index.html
+++ b/index.html
@@ -13,18 +13,16 @@
 
 <body>
 	<h1>E-Glyph</h1>
-	<div class="input">
-		<input type="file" id="input"/>
-		<div class="flex-parent jc-center">
-			<button type="button" class="block" id="left">Previous</button>
-			<button type="button" class="block" id="right">Next</button>
-		</div>
+    <h2>A bad E-book reader</h2>
+    <div class="file-input">
+        <input type="file" id="input" accept=".txt"/>
+    </div>
+	<div class="flex-parent jc-center">
+		<button type="button" class="block" id="left">Previous</button>
+		<button type="button" class="block" id="right">Next</button>
 	</div>
-
-
-	<div class="harold">
-		<div class="display">
-			<span id="single" class="single">H</span>
-		</div>
-	</div>
+    <div class="square center bg">
+        <div class="content" id="single">
+        </div>
+    </div>
 </body>
